--- a/src/components/terminal/Terminal.css
+++ b/src/components/terminal/Terminal.css
@@ -6,7 +6,7 @@
     background-color: black;
     color: white;
     padding: 10px;
-    font-family: monospace;
     height: 100vh;
     overflow-y: auto;
+    font-family: var(--font-reddit-mono), monospace;
 }
