--- a/src/src/app/globals.css
+++ b/src/src/app/globals.css
@@ -19,3 +19,7 @@ body {
 .text {
   @apply text-lg md:text-xl text-gray-400;
 }
+
+.important-text {
+  @apply text-lg md:text-xl text-gray-500 font-semibold;
+}
